--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "vizdraws"]
+	path = vizdraws
+	url = https://github.com/ignacio82/vizdraws
+	shallow = true
+	registered = true
